; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/xprtrdma/extr_svc_rdma_marshal.c_svc_rdma_rcl_chunk_counts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/xprtrdma/extr_svc_rdma_marshal.c_svc_rdma_rcl_chunk_counts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpcrdma_read_chunk = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @svc_rdma_rcl_chunk_counts(%struct.rpcrdma_read_chunk* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.rpcrdma_read_chunk*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.rpcrdma_read_chunk* %0, %struct.rpcrdma_read_chunk** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32*, i32** %5, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %27, %3
  %10 = load %struct.rpcrdma_read_chunk*, %struct.rpcrdma_read_chunk** %4, align 8
  %11 = getelementptr inbounds %struct.rpcrdma_read_chunk, %struct.rpcrdma_read_chunk* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %30

14:                                               ; preds = %9
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.rpcrdma_read_chunk*, %struct.rpcrdma_read_chunk** %4, align 8
  %18 = getelementptr inbounds %struct.rpcrdma_read_chunk, %struct.rpcrdma_read_chunk* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %16, %20
  %22 = load i32*, i32** %6, align 8
  store i32 %21, i32* %22, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, 1
  %26 = load i32*, i32** %5, align 8
  store i32 %25, i32* %26, align 4
  br label %27

27:                                               ; preds = %14
  %28 = load %struct.rpcrdma_read_chunk*, %struct.rpcrdma_read_chunk** %4, align 8
  %29 = getelementptr inbounds %struct.rpcrdma_read_chunk, %struct.rpcrdma_read_chunk* %28, i32 1
  store %struct.rpcrdma_read_chunk* %29, %struct.rpcrdma_read_chunk** %4, align 8
  br label %9

30:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
